--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -87,7 +87,7 @@
   -webkit-transition: opacity @timing-animate-toaster @speed-animate-toaster-fade;  // [1]
   -moz-transition: opacity @timing-animate-toaster @speed-animate-toaster-fade;     // [1]
   -o-transition: opacity @timing-animate-toaster @speed-animate-toaster-fade;       // [1]
-  -mx-transition: opacity @timing-animate-toaster @speed-animate-toaster-fade;      // [1]
+  -ms-transition: opacity @timing-animate-toaster @speed-animate-toaster-fade;      // [1]
   transition: opacity @timing-animate-toaster @speed-animate-toaster-fade;          // [1]
 }
 
