Use @timing-animate LESS variable to set timing function in list item and toaster animation.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -12,10 +12,10 @@
 @speed-animate-item-fade: 1s;
 @speed-animate-item-shrink: .5s;
 @delay-animate-item-shrink: .5s;
-@timing-animate-item: cubic-bezier(0.250, 0.460, 0.450, 0.940);
+@timing-animate-item: @timing-animate;
 
 @speed-animate-toaster-fade: .5s;
-@timing-animate-toaster: cubic-bezier(0.250, 0.460, 0.450, 0.940);
+@timing-animate-toaster: @timing-animate;
 
 @speed-animate-calendar-fade: .3s;
 @timing-animate-calendar: @timing-animate;
