Calendar:  * added clear date button  * add delay and animation to active date selection  * use touchend instead of touchstart in Pikaday.js to be able to add touch start and move event listeners  * add pointer-events: none into calendar when it is opening

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -208,11 +208,11 @@ TODO: Example needed
 // TODO:  Add border-radius when correct height (and dimensions) is set.
 //        Move to animations.less
 .animate-calendar-selected-date-add {
-  -webkit-transition: background-color 2s @timing-animate-date-active;  // [2]
-  -moz-transition: background-color 2s @timing-animate-date-active;  // [2]
-  -o-transition: background-color 2s @timing-animate-date-active;  // [2]
-  -ms-transition: background-color 2s @timing-animate-date-active;  // [2]
-  transition: background-color 2s @timing-animate-date-active;  // [2]
+  -webkit-transition: background-color .2s @timing-animate-date-active; // [2]
+  -moz-transition: background-color .2s @timing-animate-date-active;    // [2]
+  -o-transition: background-color .2s @timing-animate-date-active;      // [2]
+  -ms-transition: background-color .2s @timing-animate-date-active;     // [2]
+  transition: background-color .2s @timing-animate-date-active;         // [2]
   .set-font-bold; // [1]
   background-color: @color-date-active; // [2]
 }
