--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -8,6 +8,7 @@
 */
 
 @timing-animate: cubic-bezier(0.250, 0.460, 0.450, 0.940);
+@timing-animate-steep: cubic-bezier(.01, 1.11, 0, .97);
 
 @speed-animate-item-fade: 1s;
 @speed-animate-item-shrink: .5s;
@@ -108,6 +109,7 @@
 //      Date field: ng-if="!calendarOpen"
 //      Calendar:   ng-if="calendarOpen"
 .animate-calendar.ng-enter {
+  pointer-events: none;
   -webkit-transition: opacity @timing-animate-calendar @speed-animate-calendar-fade;  // [1]
   -moz-transition: opacity @timing-animate-calendar @speed-animate-calendar-fade;     // [1]
   -o-transition: opacity @timing-animate-calendar @speed-animate-calendar-fade;       // [1]
