Refactored editable field directives, now everything works relies on backdrop/container interplay with clicks to determine when the backdrop is clicked and when the container

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -76,12 +76,12 @@ TODO: working example needed!
 */
 
 .editable-field-backdrop.active {
-  &.backdrop-disable * {
+  * {
     pointer-events: none;
   }
 }
 
-.backdrop-disable .editable-field-container.active {
+.editable-field-container.active {
   * {
     pointer-events: auto !important;
   }
