Refactored list item to separate task specific html files. Fixed completing behaviour for new tasks.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -68,15 +68,15 @@
   max-height: 0;  // [2]
 }
 
-.list-item-completing-add {
+.checkbox-checking-add {
   transition-duration: 2s;
   input[type="checkbox"]:checked + label:before {
-    transition: color 2s ease;
+    transition: color 2s cubic-bezier(.01,1.11,0,.97);
   }
 }
 
-.list-item-completing,
-.list-item-completing-add.list-item-completing-add-active {
+.checkbox-checking,
+.checkbox-checking-add.checkbox-checking-add-active {
   input[type="checkbox"]:checked + label:before {
     color: @color-checkbox-checked;
     content: @icon-selection-checked;
