Added scrolling to top element on save for top-ordered lists, beginnings of list heading toggle completed

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -478,6 +478,25 @@ center.
 }
 
 /*
+`.group-heading` groups together a h2 element and optionally
+a button on the right.
+*/
+
+.group-heading {
+  display: table;
+  h2, button {
+    display: table-cell;
+    vertical-align: middle;
+  }
+  h2 {
+    width: 100%;
+  }
+  button {
+    text-align: right;
+  }
+}
+
+/*
 **************************************************************************
 # Swiper
 */
