--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -26,46 +26,47 @@
   max-height: 44px; // [1]
 }
 
-// .list-item-leave is added to an element when we want the element to be removed from list.
-// Class postfixes: "-add" and "-add-active" are added by angular $animate service.
-// 1. TODO: remove when grid is implemented and correct values are inherited
-// 2. Animate opacity first, delay max-height animation by 0.5s.
-.list-item-leave-add, {
-  pointer-events: none;
-  max-height: 44px; // [1]
-  opacity: 1;       // [1]
+// 1. Animate opacity first, delay max-height animation by 0.5s.
+.animate-list-item-leave.ng-leave {
+  -webkit-transition-property: opacity, max-height;                                   // [1]
+  -webkit-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;  // [1]
+  -webkit-transition-timing-function: @timing-animate-item, @timing-animate-item;     // [1]
+  -webkit-transition-delay: 0s, @delay-animate-item-shrink;                           // [1]
 
-  -webkit-transition-property: opacity, max-height;                                   // [2]
-  -webkit-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;  // [2]
-  -webkit-transition-timing-function: @timing-animate-item, @timing-animate-item;     // [2]
-  -webkit-transition-delay: 0s, @delay-animate-item-shrink;                           // [2]
+  -moz-transition-property: opacity, max-height;                                      // [1]
+  -moz-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;     // [1]
+  -moz-transition-timing-function: @timing-animate-item, @timing-animate-item;        // [1]
+  -moz-transition-delay: 0s, @delay-animate-item-shrink;                              // [1]
 
-  -moz-transition-property: opacity, max-height;                                      // [2]
-  -moz-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;     // [2]
-  -moz-transition-timing-function: @timing-animate-item, @timing-animate-item;        // [2]
-  -moz-transition-delay: 0s, @delay-animate-item-shrink;                              // [2]
+  -o-transition-property: opacity, max-height;                                        // [1]
+  -o-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;       // [1]
+  -o-transition-timing-function: @timing-animate-item, @timing-animate-item;          // [1]
+  -o-transition-delay: 0s, @delay-animate-item-shrink;                                // [1]
 
-  -o-transition-property: opacity, max-height;                                        // [2]
-  -o-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;       // [2]
-  -o-transition-timing-function: @timing-animate-item, @timing-animate-item;          // [2]
-  -o-transition-delay: 0s, @delay-animate-item-shrink;                                // [2]
+  -ms-transition-property: opacity, max-height;                                       // [1]
+  -ms-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;      // [1]
+  -ms-transition-timing-function: @timing-animate-item, @timing-animate-item;         // [1]
+  -ms-transition-delay: 0s, @delay-animate-item-shrink;                               // [1]
 
-  -ms-transition-property: opacity, max-height;                                       // [2]
-  -ms-transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;      // [2]
-  -ms-transition-timing-function: @timing-animate-item, @timing-animate-item;         // [2]
-  -ms-transition-delay: 0s, @delay-animate-item-shrink;                               // [2]
-
-  transition-property: opacity, max-height;                                           // [2]
-  transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;          // [2]
-  transition-timing-function: @timing-animate-item, @timing-animate-item;             // [2]
-  transition-delay: 0s, @delay-animate-item-shrink;                                   // [2]
+  transition-property: opacity, max-height;                                           // [1]
+  transition-duration: @speed-animate-item-fade, @speed-animate-item-shrink;          // [1]
+  transition-timing-function: @timing-animate-item, @timing-animate-item;             // [1]
+  transition-delay: 0s, @delay-animate-item-shrink;                                   // [1]
 }
 
 // 1. Fade out and shrink .list-item
-.list-item-leave,
-.list-item-leave-add.list-item-leave-add-active {
+.animate-list-item-leave.ng-leave.ng-leave-active {
   opacity: 0;     // [1]
-  max-height: 0;  // [2]
+  max-height: 0;  // [1]
+}
+
+// .list-item-leave is added to an element when we want the element to be removed from list.
+// Class postfixes: "-add" and "-add-active" are added by angular $animate service.
+// 1. TODO: remove when grid is implemented and correct values are inherited
+.animate-list-item-leave.ng-leave {
+  pointer-events: none;
+  max-height: 44px; // [1]
+  opacity: 1;       // [1]
 }
 
 // Animate checkbox checking
