Refactored editor into multiple smaller pieces to increase maintainability.

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -58,6 +58,11 @@ TODO: em grid structure explained in plain English (when new grid structure deci
   height: inherit;    // [2]
 }
 
+// 1. Intermediate div needs height to work
+.container-editor--inner {
+  height: inherit;    // [1]
+}
+
 // 1. Maximum height is set programmatically - set default maximum height here as well for reference.
 .container-master, .container-editor {
   max-height: @height-landscape-max;  // [1]
